<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StepsActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue69">

        <TextView
            android:id="@+id/number_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/font"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="100dp"/>
        <TextView
            android:id="@+id/text_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/font"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/number_step"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="75"
            android:layout_below="@+id/text_step"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/weight"
                android:textColor="@color/blue69"
                android:fontFamily="@font/font"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginHorizontal="40dp"
                android:drawableStart="@drawable/ic_scale"
                android:drawableTint="@color/blue69"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="30dp"
                android:tag="@string/weight"
                android:clickable="true"
                android:focusable="true"
                android:onClick="pressButton"/>

            <Button
                android:id="@+id/keep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/keeping_fit"
                android:textColor="@color/blue69"
                android:fontFamily="@font/font"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginHorizontal="40dp"
                android:drawableStart="@drawable/ic_yoga"
                android:drawableTint="@color/blue69"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="30dp"
                android:tag="@string/keeping_fit"
                android:clickable="true"
                android:focusable="true"
                android:onClick="pressButton"/>

            <Button
                android:id="@+id/build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/build_muscule"
                android:textColor="@color/blue69"
                android:fontFamily="@font/font"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginHorizontal="40dp"
                android:drawableStart="@drawable/ic_triceps"
                android:drawableTint="@color/blue69"
                android:paddingStart="60dp"
                android:paddingEnd="40dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="30dp"
                android:tag="@string/build_muscule"
                android:clickable="true"
                android:focusable="true"
                android:onClick="pressButton"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>